--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -1,20 +1,52 @@
 <html>
     <head>
         <title>"Tarea HTML de Adan Cuenca Lajmadi"</title>
-
-
+        <link rel="stylesheet" href="styles.css">
+        <!-- <style>
+            h1{
+                color:blue;
+            }
+            img {
+                width: 400px;
+            }
+            #thirdDiv{
+                width: 500px;
+                height: 600px;
+                background-color:bisque;
+                padding: 50px;
+                border: 5px solid coral;
+                
+            }
+            #spanId{
+                font-size: 18px;
+                margin: 50px;
+            }
+        </style> -->
     </head>
+
     <body>
-        <div>
+        <div class="divClass">
             <h1>Adan Cuenca Lajmadi</h1>
             <h3>Henry</h3>
-            <h4>Tarea de HTML/css</h4>
+            <h4>Tarea de HTML/CSS</h4>
         </div>
-        <div>
-            <span>Lomito</span>
-            
+        <div class="divClass">
+            <span id="spanId">Asado</span>
+            <a href = "https://virarobrasas.com.ar/"> VIVARO BRASAS</a>
         </div>
-        <div></div>
+
+        <div id="thirdDiv">
+            <ul>
+                <li>Bola de Lomo
+                    <img src="asado1.jpg"/>
+                </li>
+                <li>Matambre
+                    <img src="asado2.jpg"/>
+                </li>
+            </ul>
+
+
+        </div>
 
     </body>
 </html>
